--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Robbery -- Fiction'
 - !lcsh 'Disguise -- Fiction'
 - !lcsh 'Short stories'
+- GITenberg
 title: 'Midnight In Beauchamp Row
 
   1895'
